Fixed css isusue on  dashboard cards for reported badge alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3004,7 +3004,7 @@ footer {
 
 /* Temporary posted here the code from profile.css, the style was needed in dashboard */
 .pinedbtn {
-  margin-top: auto;
+ 
   background: var(--dark-grey);
   width: fit-content;
   display: flex;
@@ -3014,6 +3014,10 @@ footer {
   border-radius: 100%;
   padding: 10px;
   aspect-ratio: 1;
+}
+
+.card[content="text"] .pinedbtn {
+	margin-top: auto;
 }
 
 .pinedbtn .peer-icon.peer-icon-pinpost {
